--- a/.github/workflows/oblig2.yml
+++ b/.github/workflows/oblig2.yml
@@ -1,11 +1,12 @@
-name: Terraform CI/CD
+name: Terraform Code Validation
 
 on:
   pull_request:
     branches:
-      - dev
-      - staging
-      - prod
+      - 'feature/*'  # Feature branches
+  push:
+    branches:
+      - 'feature/*'  # Feature branches
 
 jobs:
   validate:
@@ -14,39 +15,17 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Setup Terraform
+      - name: Set up Terraform
         uses: hashicorp/setup-terraform@v1
-        with:
-          terraform_version: 1.0.9
 
-      - name: Terraform Format
-        run: terraform fmt -check
+      - name: Terraform FMT
+        run: terraform fmt -check -recursive
 
       - name: Terraform Validate
         run: terraform validate
 
-      - name: Terraform Lint
+      - name: Run TFLint
         run: tflint
 
-  deploy:
-    needs: validate
-    runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/dev' || github.ref == 'refs/heads/staging'
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v1
-
-      - name: Terraform Init
-        run: terraform init
-
-      - name: Terraform Plan
-        run: terraform plan -var-file="terraform.tfvars.${{ github.ref_name }}"
-
-      - name: Terraform Apply
-        run: terraform apply -auto-approve -var-file="terraform.tfvars.${{ github.ref_name }}"
-        if: github.ref != 'refs/heads/prod'
-      - name: Approval for prod
-        uses: hmarr/auto-approval
+      - name: Run tfsec
+        run: tfsec
