--- a/.github/workflows/oblig2-validation.yml
+++ b/.github/workflows/oblig2-validation.yml
@@ -1,12 +1,9 @@
 name: Terraform Code Validation
 
 on:
-  pull_request:
-    branches:
-      - 'feature/*'  # Feature branches
   push:
-    branches:
-      - 'feature/*'  # Feature branches
+    branches-ignore:
+      - main
 
 jobs:
   validate:
