--- a/.github/workflows/oblig2-deploy.yml
+++ b/.github/workflows/oblig2-deploy.yml
@@ -10,7 +10,7 @@ env:
   ARM_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
   ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
   ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
-  WORKING_DIR: ./deployments
+  WORKING_DIR: ./oblig2/deployments
   TERRAFORM_VERSION: 4.3.0
 
 jobs:
